[project]
name = "joyhallo-comfyui"
description = "a custom node for [a/JoyHallo](https://github.com/jdh-algo/JoyHallo)"
version = "1.0.0"
license = {file = "LICENSE"}
dependencies = ["accelerate", "audio-separator", "av", "bitsandbytes", "decord", "diffusers", "einops", "insightface", "librosa", "mediapipe[vision]==0.10.14", "mlflow", "moviepy", "numpy", "omegaconf", "onnx2torch", "onnx", "onnxruntime-gpu", "opencv-contrib-python", "opencv-python-headless", "opencv-python", "pillow", "tqdm", "transformers", "# xformers", "isort", "pylint", "pre-commit"]

[project.urls]
Repository = "https://github.com/AIFSH/JoyHallo-ComfyUI"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "JoyHallo-ComfyUI"
Icon = ""
